fix irrelevant message in "show transactions summary message"